SET(SOURCES ui_opening_screen.c
    ui_home_screen.c
    ui_theme_manager.c
    ui_themes.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_1255442560.c
    ui_img_batt_100_png.c
    ui_img_881007481.c
    ui_img_554368748.c
    ui_img_1282450877.c
    ui_img_200721698.c
    ui_img_1303013389.c
    ui_img_132362840.c
    ui_img_1604149530.c
    ui_img_1255441537.c
    ui_img_527359408.c
    ui_img_1609088587.c
    ui_img_881006458.c
    ui_img_554369771.c
    ui_img_1282451900.c
    ui_img_200722721.c
    ui_img_1303012366.c
    ui_img_132363863.c
    ui_img_1604146457.c
    ui_img_1255444610.c
    ui_img_527362481.c
    ui_img_1609091660.c
    ui_img_881009531.c
    ui_img_554366698.c
    ui_img_1282448827.c
    ui_img_200719648.c
    ui_img_1303015439.c
    ui_img_132360790.c
    ui_img_1604147480.c
    ui_img_1255443587.c
    ui_img_527361458.c
    ui_img_1609090637.c
    ui_img_881008508.c
    ui_img_554367721.c
    ui_img_1282449850.c
    ui_img_200720671.c
    ui_img_1303014416.c
    fonts/ui_font_Font1.c)

add_library(ui ${SOURCES})
